  - See also to the ISO8601 wiki page.
  - Added fractional times and tests to Durations.

0.02 Fri Oct  9 11:00:55 BST 2009
  - Fixed time types.
  - Added coercions for the time types.
  - Documentation improvements

0.01 Fri Jun 12 12:42:29 BST 2009
  - Initial version.
